# InkExtrakt

./: .gitignore  README.md  annotationextractor.py  annotationwriter.py  main.py  pyproject.toml
